--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.basaki.example</groupId>
-    <artifactId>jpa-postgres-spring</artifactId>
+    <groupId>com.orders.app</groupId>
+    <artifactId>orders</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
     <name>JPA Postgres Spring Boot Example</name>
@@ -18,8 +18,8 @@
     </properties>
 
     <modules>
-        <module>jpa-postgres-spring-model</module>
-        <module>jpa-postgres-spring-service</module>
+        <module>order-model</module>
+        <module>order-service</module>
     </modules>
 
     <dependencyManagement>
