Depuracion y dockenizacion de maven

--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ REDIS_PORT=6379
 # IPS
 EM_DOCKER_BACKEND_SUBNET=121.9.9.0/16
 EM_DOCKER_DATABASE_IP=121.9.9.2
-EM_DOCKER_MAIL_IP=121.9.9.3
+EM_DOCKER_JAVA_IP=121.9.9.3
 EM_DOCKER_REDIS_IP=121.9.9.4
