Eliminacion de archivos no necesarios por los momentos

--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ EM_DOCKER_BACKEND_SUBNET=121.9.9.0/16
 EM_DOCKER_DATABASE_IP=121.9.9.2
 EM_DOCKER_JAVA_IP=121.9.9.3
 EM_DOCKER_REDIS_IP=121.9.9.4
+
+# APPLICATION
+PORT_APPLICATION=8080
