--- a/order-service/src/main/resources/config/application.yml
+++ b/order-service/src/main/resources/config/application.yml
@@ -33,7 +33,7 @@ server:
 #Postgres persistence
 spring:
   datasource:
-    url: jdbc:postgresql://192.168.99.100:5430/orders
+    url: jdbc:postgresql://db:5432/orders
     username: postgres
     password: 123456
     platform: POSTGRESQL
